node-red-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      containers:
      - name: node-red
        image: nodered/node-red
        ports:
        - containerPort: 1880
