node-red-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: node-red-service
spec:
  selector:
    app: node-red
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1880
  type: NodePort
