node-red-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: node-red-melg.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-red-service
            port:
              number: 80
